<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">alipay</string>
    <string name="menu_settings">Settings</string>
    
    <string name="sjzz">手机转账</string>
    <string name="xykhk">信用卡还款</string>
    <string name="sjcz">手机充值</string>
    <string name="bl">手机宝令</string>
    <string name="cp">淘宝彩票</string>
    <string name="sf">水费</string>
    <string name="df">电费</string>
    <string name="rqf">燃气费</string>
    <string name="ghkd">固话/宽带</string>
    <string name="wysk">我要收款</string>
    <string name="wyfk">我要付款</string>
    <string name="yxp">悦享拍</string>
    <string name="tmzf">条码支付</string>
    <string name="tmsy">条码收银</string>
    <string name="axjz">爱心捐赠</string>
    <string name="yxdk">游戏点卡</string>
    
    <string name="register">注册/激活</string>
    <string name="login">登录</string>
    <string name="registerTitle">新用户注册/激活</string>
    <string name="rememberLoginPassword">记住登录密码</string>
    <string name="forgotPassword"><u>忘记密码？</u></string>
    
    <string name="name">真实姓名</string>
    <string name="phone">手机号码</string>
    <string name="certificateNO">证件号码</string>
    <string name="setLoginPass">设置登录密码</string>
    <string name="setLoginPassTip">密码由6-20个英文字母、数字或符号组成。</string>
    <string name="setPayPass">设置支付密码</string>
    <string name="setPayPassTip">密码由6-20个英文字母、数字或符号组成。</string>
    <string name="checkCode">验证码</string>
    <string name="acceptRegister"><u>同意注册协议</u></string>
    <string name="account">账户名（Email地址/手机号码）</string>
    <string name="loginPass">登录密码</string>
    
    <string name="ok">确认信息</string>
    <string name="passVisibilityTip">密码可见</string>
    
    <string name="alipayLoginTip1">用支付宝账户登录 </string>
    <string name="alipayLoginTip2">支付宝账户为Email或者手机号</string>
    <string name="taobaoLoginTip1">用淘宝账户登录 </string>
    <string name="taobaoLoginTip2">淘宝账户名为您淘宝的昵称</string>
    <string name="useTaobaoLogin">使用淘宝账户登录</string>
    <string name="useAlipayLogin">使用支付宝账户登录</string>
    <string name="useTaobaoLoginAccountNameTip">账户名（手机号码/会员名/邮箱）</string>
    <string name="useTaobaoLoginPasswordTip">密码</string>
    
    <string name="kyye">可用余额（元）</string>
    <string name="about">关于</string>
    <string name="qbsz">全部收支</string>
    <string name="xzlxr">选择联系人</string>
    
</resources>