<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#fff"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <LinearLayout
                android:id="@+id/top"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    style="@style/blueHeader"
                    android:text="@string/registerTitle" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/footer"
                android:layout_below="@id/top"
                android:orientation="vertical" >

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fillViewport="true"
                    android:scrollbars="vertical" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:paddingLeft="@dimen/containerPaddingL"
                        android:paddingRight="@dimen/containerPaddingR"
                        android:paddingTop="@dimen/containerPaddingT" >

                        <EditText
                            android:id="@+id/editText1"
                            style="@style/inputText"
                            android:layout_width="match_parent"
                            android:hint="@string/phone"
                            android:inputType="phone" >
                        </EditText>

                        <EditText
                            style="@style/inputText"
                            android:layout_width="match_parent"
                            android:hint="@string/name"
                            android:inputType="text" />

                        <Spinner
                            android:id="@+id/certificate"
                            style="@style/spinner"
                            android:layout_width="match_parent" />

                        <EditText
                            style="@style/inputText"
                            android:inputType="number"
                            android:hint="@string/certificateNO" />

                        <EditText
                            style="@style/inputText"
                            android:hint="@string/setLoginPass"
                            android:layout_marginBottom="7dp"
                            android:inputType="textPassword" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="12sp"
                            android:layout_marginBottom="13dp"
                            android:text="@string/setLoginPassTip" />
                        
                        <EditText
                            style="@style/inputText"
                            android:hint="@string/setPayPass"
                            android:layout_marginBottom="7dp"
                            android:inputType="textPassword" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="12sp"
                            android:layout_marginBottom="13dp"
                            android:text="@string/setPayPassTip" />

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_marginBottom="13dp"
                            android:layout_height="wrap_content" >

                            <TextView
                                style="@style/text1"
                                android:text="@string/passVisibilityTip" />

                            <CheckBox
                                style="@style/checkbox" />

                        </TableRow>
                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_marginBottom="13dp"
                            android:layout_height="wrap_content" >

                            <EditText
                            style="@style/inputText"
                            android:hint="@string/checkCode"
                            android:layout_weight="1"
                            android:inputType="text" />

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_marginLeft="13dp"
                                android:layout_height="wrap_content"
                                android:src="@drawable/check_code" />

                        </TableRow>
                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" >

                            <TextView
                                android:layout_weight="1"
                                style="@style/link"
                                android:text="@string/acceptRegister" />

                            <CheckBox
                                android:checked="true"
                                style="@style/checkbox" />

                        </TableRow>

                    </LinearLayout>
                </ScrollView>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/footer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:orientation="vertical"
                android:paddingBottom="@dimen/containerPaddingB"
                android:paddingLeft="@dimen/containerPaddingL"
                android:paddingRight="@dimen/containerPaddingR"
                android:paddingTop="@dimen/containerPaddingT" >

                <Button
                    style="@style/ok_btn"
                    android:text="@string/ok" />
            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>
