<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/alipay_login"
        style="@style/loginType"
        android:background="#27b" >

        <LinearLayout
            style="@style/loginType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="34dp"
            android:background="#00000000"
            android:gravity="center_vertical" >

            <ImageView
                android:layout_width="101dp"
                android:layout_height="51dp"
                android:src="@drawable/alipay_white_logo" />

            <TextView
                style="@style/loginTypeText"
                android:text="@string/alipayLoginTip1" />

            <TextView
                style="@style/loginTypeText"
                android:text="@string/alipayLoginTip2" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/taobao_login"
        style="@style/loginType"
        android:background="#ed6d00" >
        <LinearLayout
            style="@style/loginType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="34dp"
            android:background="#00000000"
            android:gravity="center_vertical" >

            <ImageView
                android:layout_width="103dp"
                android:layout_height="43dp"
                android:src="@drawable/taobao_white_logo" />

            <TextView
                style="@style/loginTypeText"
                android:text="@string/taobaoLoginTip1" />

            <TextView
                style="@style/loginTypeText"
                android:text="@string/taobaoLoginTip2" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>